Fixed width overflow

--- a/E1_HTML/projet-e1/index.html
+++ b/E1_HTML/projet-e1/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Portail Projets ESN - Accueil</title>
   <meta name="description" content="Portail interne de gestion des projets et tâches des collaborateurs." />
   <link rel="stylesheet" href="css/style.css" />
