--- a/E1_HTML/projet-e1/user.html
+++ b/E1_HTML/projet-e1/user.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Portail Projets ESN - Détail utilisateur</title>
   <meta name="description" content="Détails d'un utilisateur et gestion de ses tâches." />
   <link rel="stylesheet" href="css/style.css" />
