Bar de recherches fonctionnelle

--- a/E1_HTML/projet-e1/index.html
+++ b/E1_HTML/projet-e1/index.html
@@ -38,7 +38,7 @@
           <label for="searchInput" class="sr-only">Recherche</label>
           <input id="searchInput" name="q" type="search" placeholder="Rechercher un utilisateur ou une tâche..." autocomplete="off" aria-describedby="searchHelp" />
           <button type="reset" id="clearSearch" aria-label="Effacer la recherche">×</button>
-          <p id="searchHelp" class="search__help">Tapez au moins 2 caractères.</p>
+          <p id="searchHelp" class="search__help">Recherche instantanée par nom (aucune touche Entrée nécessaire).</p>
         </form>
       </div>
     </section>
