--- a/E1_HTML/projet-e1/index.html
+++ b/E1_HTML/projet-e1/index.html
@@ -11,8 +11,9 @@
       name="description"
       content="Portail interne de gestion des projets et tâches des collaborateurs."
     />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/responsive.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/index.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
   </head>
   <body data-page="home">
     <div
