--- a/E1_HTML/projet-e1/user.html
+++ b/E1_HTML/projet-e1/user.html
@@ -6,6 +6,7 @@
   <title>Portail Projets ESN - Détail utilisateur</title>
   <meta name="description" content="Détails d'un utilisateur et gestion de ses tâches." />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/user.css" />
   <link rel="stylesheet" href="css/responsive.css" />
 </head>
 <body data-page="user">
